# Shining_Force_II_Blacksmith

./: .gitignore  CMakeLists.txt  LICENSE  README.md  items.txt
src/: blacksmith.c  blacksmith.h  displayCharacterItems.c  freeBuffers.c  functions.h  getIntFromUser.c  readItemList.c  readSaveState.c  transformItem.c
